# rust-grpc-demo

./: Cargo.toml  README.md  build.rs
node-apm-demo/: package-lock.json
proto/: metrics.proto
rust-otlp-receiver/: Cargo.toml  build.rs
rust-otlp-receiver/src/: metrics.rs
rust-otlp-receiver/src/service/: mod.rs
src/: client.rs  metrics.rs  server.rs
