[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

#[[bin]] # Bin to run the HelloWorld gRPC server
#name = "helloworld-server"
#path = "src/server.rs"
#
#[[bin]] # Bin to run the HelloWorld gRPC client
#name = "helloworld-client"
#path = "src/client.rs"

[[bin]] # Bin to run the HelloWorld metrics client
name = "metrics"
path = "src/metrics.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
cargo-watch = "8.1.2"
cmake = "0.1.48"

[build-dependencies]
tonic-build = "0.7"
